@@ -113,7 +113,8 @@ namespace KJS {
            ScreenTop, ScreenLeft,
            ScrollTo, ScrollX, ScrollY, MoveBy, MoveTo, ResizeBy, ResizeTo, Self, _Window, Top, _Screen,
            Image, Option, Alert, Confirm, Prompt, Open, SetTimeout, ClearTimeout,
-           Focus, Blur, Close, SetInterval, ClearInterval, CaptureEvents, Onabort, Onblur,
+           Focus, Blur, Close, SetInterval, ClearInterval, CaptureEvents, 
+           AddEventListener, RemoveEventListener, Onabort, Onblur,
            Onchange, Onclick, Ondblclick, Ondragdrop, Onerror, Onfocus,
            Onkeydown, Onkeypress, Onkeyup, Onload, Onmousedown, Onmousemove,
            Onmouseout, Onmouseover, Onmouseup, Onmove, Onreset, Onresize,
