@@ -23,116 +23,120 @@ namespace KJS {
 
 const struct HashEntry WindowTableEntries[] = {
    { 0, 0, 0, 0, 0 },
-   { "scrollbars", Window::Scrollbars, DontDelete|ReadOnly, 0, 0 },
-   { "onmouseup", Window::Onmouseup, DontDelete, 0, 0 },
-   { "NodeFilter", Window::NodeFilter, DontDelete, 0, &WindowTableEntries[84] },
-   { 0, 0, 0, 0, 0 },
-   { "Node", Window::Node, DontDelete, 0, &WindowTableEntries[80] },
-   { "resizeTo", Window::ResizeTo, DontDelete|Function, 2, 0 },
-   { "event", Window::Event, DontDelete|ReadOnly, 0, 0 },
-   { 0, 0, 0, 0, 0 },
-   { "onkeyup", Window::Onkeyup, DontDelete, 0, 0 },
-   { "location", Window::_Location, DontDelete, 0, &WindowTableEntries[86] },
-   { 0, 0, 0, 0, 0 },
-   { "DOMException", Window::DOMException, DontDelete, 0, 0 },
-   { 0, 0, 0, 0, 0 },
-   { "setInterval", Window::SetInterval, DontDelete|Function, 2, &WindowTableEntries[105] },
-   { 0, 0, 0, 0, 0 },
-   { "document", Window::Document, DontDelete|ReadOnly, 0, &WindowTableEntries[78] },
-   { "Option", Window::Option, DontDelete|ReadOnly, 0, &WindowTableEntries[107] },
+   { "Option", Window::Option, DontDelete|ReadOnly, 0, &WindowTableEntries[103] },
    { "closed", Window::Closed, DontDelete|ReadOnly, 0, &WindowTableEntries[87] },
    { 0, 0, 0, 0, 0 },
    { 0, 0, 0, 0, 0 },
-   { "Image", Window::Image, DontDelete|ReadOnly, 0, &WindowTableEntries[99] },
-   { "frames", Window::Frames, DontDelete|ReadOnly, 0, &WindowTableEntries[81] },
-   { "screenTop", Window::ScreenTop, DontDelete|ReadOnly, 0, 0 },
-   { "screen", Window::_Screen, DontDelete|ReadOnly, 0, 0 },
-   { "CSSRule", Window::CSSRule, DontDelete, 0, 0 },
-   { "length", Window::Length, DontDelete|ReadOnly, 0, &WindowTableEntries[79] },
-   { "offscreenBuffering", Window::OffscreenBuffering, DontDelete|ReadOnly, 0, 0 },
+   { "onload", Window::Onload, DontDelete, 0, 0 },
+   { "frames", Window::Frames, DontDelete|ReadOnly, 0, 0 },
    { 0, 0, 0, 0, 0 },
-   { "onkeypress", Window::Onkeypress, DontDelete, 0, 0 },
-   { "clearTimeout", Window::ClearTimeout, DontDelete|Function, 1, 0 },
-   { "defaultstatus", Window::DefaultStatus, DontDelete, 0, &WindowTableEntries[77] },
-   { "name", Window::Name, DontDelete, 0, &WindowTableEntries[104] },
-   { "opener", Window::Opener, DontDelete|ReadOnly, 0, 0 },
-   { "parent", Window::Parent, DontDelete|ReadOnly, 0, &WindowTableEntries[82] },
-   { "screenX", Window::ScreenX, DontDelete|ReadOnly, 0, 0 },
-   { "screenY", Window::ScreenY, DontDelete|ReadOnly, 0, 0 },
+   { "screenLeft", Window::ScreenLeft, DontDelete|ReadOnly, 0, &WindowTableEntries[90] },
+   { "CSSRule", Window::CSSRule, DontDelete, 0, &WindowTableEntries[91] },
+   { "length", Window::Length, DontDelete|ReadOnly, 0, &WindowTableEntries[81] },
+   { "pageYOffset", Window::PageYOffset, DontDelete|ReadOnly, 0, 0 },
+   { "onmouseout", Window::Onmouseout, DontDelete, 0, &WindowTableEntries[110] },
+   { "clearInterval", Window::ClearInterval, DontDelete|Function, 1, 0 },
    { 0, 0, 0, 0, 0 },
-   { "pageXOffset", Window::PageXOffset, DontDelete|ReadOnly, 0, 0 },
-   { "pageYOffset", Window::PageYOffset, DontDelete|ReadOnly, 0, &WindowTableEntries[83] },
-   { "onmouseout", Window::Onmouseout, DontDelete, 0, 0 },
-   { "self", Window::Self, DontDelete|ReadOnly, 0, 0 },
+   { 0, 0, 0, 0, 0 },
+   { 0, 0, 0, 0, 0 },
+   { "opener", Window::Opener, DontDelete|ReadOnly, 0, &WindowTableEntries[82] },
+   { "parent", Window::Parent, DontDelete|ReadOnly, 0, &WindowTableEntries[83] },
+   { "Range", Window::Range, DontDelete, 0, 0 },
+   { 0, 0, 0, 0, 0 },
+   { 0, 0, 0, 0, 0 },
+   { "name", Window::Name, DontDelete, 0, 0 },
+   { "navigator", Window::_Navigator, DontDelete|ReadOnly, 0, &WindowTableEntries[84] },
+   { 0, 0, 0, 0, 0 },
+   { "innerWidth", Window::InnerWidth, DontDelete|ReadOnly, 0, 0 },
    { "onblur", Window::Onblur, DontDelete, 0, 0 },
    { 0, 0, 0, 0, 0 },
-   { "ondblclick", Window::Ondblclick, DontDelete, 0, &WindowTableEntries[102] },
-   { 0, 0, 0, 0, 0 },
-   { "onclick", Window::Onclick, DontDelete, 0, 0 },
-   { "navigator", Window::_Navigator, DontDelete|ReadOnly, 0, &WindowTableEntries[95] },
-   { "window", Window::_Window, DontDelete|ReadOnly, 0, 0 },
-   { "open", Window::Open, DontDelete|Function, 3, 0 },
-   { "scrollX", Window::ScrollX, DontDelete|ReadOnly, 0, 0 },
-   { "innerWidth", Window::InnerWidth, DontDelete|ReadOnly, 0, &WindowTableEntries[85] },
-   { "Event", Window::EventCtor, DontDelete, 0, &WindowTableEntries[93] },
-   { 0, 0, 0, 0, 0 },
-   { 0, 0, 0, 0, 0 },
-   { 0, 0, 0, 0, 0 },
-   { 0, 0, 0, 0, 0 },
-   { "crypto", Window::Crypto, DontDelete|ReadOnly, 0, &WindowTableEntries[90] },
-   { "prompt", Window::Prompt, DontDelete|Function, 2, &WindowTableEntries[100] },
+   { "onclick", Window::Onclick, DontDelete, 0, &WindowTableEntries[104] },
    { "onmousedown", Window::Onmousedown, DontDelete, 0, 0 },
-   { "status", Window::Status, DontDelete, 0, 0 },
+   { 0, 0, 0, 0, 0 },
+   { "self", Window::Self, DontDelete|ReadOnly, 0, &WindowTableEntries[98] },
+   { "scrollX", Window::ScrollX, DontDelete|ReadOnly, 0, &WindowTableEntries[88] },
+   { "scrollY", Window::ScrollY, DontDelete|ReadOnly, 0, &WindowTableEntries[105] },
+   { 0, 0, 0, 0, 0 },
+   { "innerHeight", Window::InnerHeight, DontDelete|ReadOnly, 0, 0 },
    { 0, 0, 0, 0, 0 },
    { 0, 0, 0, 0, 0 },
-   { "innerHeight", Window::InnerHeight, DontDelete|ReadOnly, 0, &WindowTableEntries[101] },
+   { 0, 0, 0, 0, 0 },
+   { "confirm", Window::Confirm, DontDelete|Function, 1, &WindowTableEntries[93] },
+   { "Event", Window::EventCtor, DontDelete, 0, 0 },
+   { "crypto", Window::Crypto, DontDelete|ReadOnly, 0, 0 },
+   { "defaultStatus", Window::DefaultStatus, DontDelete, 0, &WindowTableEntries[92] },
+   { 0, 0, 0, 0, 0 },
+   { "status", Window::Status, DontDelete, 0, &WindowTableEntries[80] },
+   { "onchange", Window::Onchange, DontDelete, 0, &WindowTableEntries[100] },
    { "onabort", Window::Onabort, DontDelete, 0, 0 },
-   { "onchange", Window::Onchange, DontDelete, 0, 0 },
-   { "onkeydown", Window::Onkeydown, DontDelete, 0, 0 },
    { 0, 0, 0, 0, 0 },
+   { "setTimeout", Window::SetTimeout, DontDelete|Function, 2, 0 },
    { 0, 0, 0, 0, 0 },
+   { "konqueror", Window::_Konqueror, DontDelete|ReadOnly, 0, 0 },
    { 0, 0, 0, 0, 0 },
-   { "outerWidth", Window::OuterWidth, DontDelete|ReadOnly, 0, 0 },
-   { "ondragdrop", Window::Ondragdrop, DontDelete, 0, 0 },
-   { "scrollBy", Window::ScrollBy, DontDelete|Function, 2, &WindowTableEntries[94] },
+   { "scrollbars", Window::Scrollbars, DontDelete|ReadOnly, 0, &WindowTableEntries[85] },
    { 0, 0, 0, 0, 0 },
-   { "konqueror", Window::_Konqueror, DontDelete|ReadOnly, 0, &WindowTableEntries[89] },
-   { "resizeBy", Window::ResizeBy, DontDelete|Function, 2, &WindowTableEntries[103] },
-   { "defaultStatus", Window::DefaultStatus, DontDelete, 0, &WindowTableEntries[96] },
-   { "Range", Window::Range, DontDelete, 0, &WindowTableEntries[88] },
-   { "history", Window::_History, DontDelete|ReadOnly, 0, 0 },
+   { "outerHeight", Window::OuterHeight, DontDelete|ReadOnly, 0, &WindowTableEntries[101] },
+   { "resizeBy", Window::ResizeBy, DontDelete|Function, 2, &WindowTableEntries[106] },
+   { "NodeFilter", Window::NodeFilter, DontDelete, 0, 0 },
+   { "onreset", Window::Onreset, DontDelete, 0, 0 },
+   { "offscreenBuffering", Window::OffscreenBuffering, DontDelete|ReadOnly, 0, 0 },
    { "clientInformation", Window::ClientInformation, DontDelete|ReadOnly, 0, 0 },
-   { "outerHeight", Window::OuterHeight, DontDelete|ReadOnly, 0, &WindowTableEntries[92] },
-   { "personalbar", Window::Personalbar, DontDelete|ReadOnly, 0, 0 },
-   { "screenLeft", Window::ScreenLeft, DontDelete|ReadOnly, 0, &WindowTableEntries[106] },
-   { "scroll", Window::Scroll, DontDelete|Function, 2, 0 },
-   { "scrollTo", Window::ScrollTo, DontDelete|Function, 2, 0 },
-   { "scrollY", Window::ScrollY, DontDelete|ReadOnly, 0, 0 },
+   { "scrollTo", Window::ScrollTo, DontDelete|Function, 2, &WindowTableEntries[95] },
+   { "DOMException", Window::DOMException, DontDelete, 0, 0 },
+   { "alert", Window::Alert, DontDelete|Function, 1, 0 },
+   { "resizeTo", Window::ResizeTo, DontDelete|Function, 2, &WindowTableEntries[96] },
+   { "onerror", Window::Onerror, DontDelete, 0, 0 },
+   { 0, 0, 0, 0, 0 },
+   { 0, 0, 0, 0, 0 },
+   { "location", Window::_Location, DontDelete, 0, 0 },
+   { "onkeyup", Window::Onkeyup, DontDelete, 0, 0 },
+   { "addEventListener", Window::AddEventListener, DontDelete|Function, 3, 0 },
+   { "focus", Window::Focus, DontDelete|Function, 0, 0 },
+   { "personalbar", Window::Personalbar, DontDelete|ReadOnly, 0, &WindowTableEntries[109] },
+   { "event", Window::Event, DontDelete|ReadOnly, 0, 0 },
+   { "document", Window::Document, DontDelete|ReadOnly, 0, &WindowTableEntries[86] },
+   { "defaultstatus", Window::DefaultStatus, DontDelete, 0, &WindowTableEntries[79] },
+   { "history", Window::_History, DontDelete|ReadOnly, 0, 0 },
+   { 0, 0, 0, 0, 0 },
+   { "clearTimeout", Window::ClearTimeout, DontDelete|Function, 1, 0 },
+   { "screenTop", Window::ScreenTop, DontDelete|ReadOnly, 0, 0 },
+   { "Node", Window::Node, DontDelete, 0, &WindowTableEntries[111] },
+   { "outerWidth", Window::OuterWidth, DontDelete|ReadOnly, 0, 0 },
+   { "pageXOffset", Window::PageXOffset, DontDelete|ReadOnly, 0, &WindowTableEntries[108] },
+   { "screenX", Window::ScreenX, DontDelete|ReadOnly, 0, 0 },
+   { "screenY", Window::ScreenY, DontDelete|ReadOnly, 0, &WindowTableEntries[99] },
+   { "scroll", Window::Scroll, DontDelete|Function, 2, &WindowTableEntries[89] },
+   { "scrollBy", Window::ScrollBy, DontDelete|Function, 2, 0 },
    { "moveBy", Window::MoveBy, DontDelete|Function, 2, 0 },
    { "moveTo", Window::MoveTo, DontDelete|Function, 2, 0 },
+   { "window", Window::_Window, DontDelete|ReadOnly, 0, 0 },
    { "top", Window::Top, DontDelete|ReadOnly, 0, 0 },
-   { "alert", Window::Alert, DontDelete|Function, 1, &WindowTableEntries[91] },
-   { "confirm", Window::Confirm, DontDelete|Function, 1, 0 },
-   { "setTimeout", Window::SetTimeout, DontDelete|Function, 2, 0 },
-   { "focus", Window::Focus, DontDelete|Function, 0, &WindowTableEntries[97] },
-   { "blur", Window::Blur, DontDelete|Function, 0, 0 },
-   { "close", Window::Close, DontDelete|Function, 0, &WindowTableEntries[98] },
-   { "clearInterval", Window::ClearInterval, DontDelete|Function, 1, 0 },
-   { "captureEvents", Window::CaptureEvents, DontDelete|Function, 0, 0 },
-   { "onerror", Window::Onerror, DontDelete, 0, 0 },
+   { "screen", Window::_Screen, DontDelete|ReadOnly, 0, 0 },
+   { "Image", Window::Image, DontDelete|ReadOnly, 0, 0 },
+   { "prompt", Window::Prompt, DontDelete|Function, 2, &WindowTableEntries[94] },
+   { "open", Window::Open, DontDelete|Function, 3, 0 },
+   { "blur", Window::Blur, DontDelete|Function, 0, &WindowTableEntries[97] },
+   { "close", Window::Close, DontDelete|Function, 0, 0 },
+   { "setInterval", Window::SetInterval, DontDelete|Function, 2, 0 },
+   { "captureEvents", Window::CaptureEvents, DontDelete|Function, 0, &WindowTableEntries[102] },
+   { "removeEventListener", Window::RemoveEventListener, DontDelete|Function, 3, 0 },
+   { "ondblclick", Window::Ondblclick, DontDelete, 0, 0 },
+   { "ondragdrop", Window::Ondragdrop, DontDelete, 0, 0 },
    { "onfocus", Window::Onfocus, DontDelete, 0, 0 },
-   { "onload", Window::Onload, DontDelete, 0, 0 },
-   { "onmousemove", Window::Onmousemove, DontDelete, 0, 0 },
+   { "onkeydown", Window::Onkeydown, DontDelete, 0, 0 },
+   { "onkeypress", Window::Onkeypress, DontDelete, 0, 0 },
+   { "onmousemove", Window::Onmousemove, DontDelete, 0, &WindowTableEntries[107] },
    { "onmouseover", Window::Onmouseover, DontDelete, 0, 0 },
+   { "onmouseup", Window::Onmouseup, DontDelete, 0, 0 },
    { "onmove", Window::Onmove, DontDelete, 0, 0 },
-   { "onreset", Window::Onreset, DontDelete, 0, 0 },
    { "onresize", Window::Onresize, DontDelete, 0, 0 },
    { "onselect", Window::Onselect, DontDelete, 0, 0 },
    { "onsubmit", Window::Onsubmit, DontDelete, 0, 0 },
    { "onunload", Window::Onunload, DontDelete, 0, 0 }
 };
 
-const struct HashTable WindowTable = { 2, 108, WindowTableEntries, 77 };
+const struct HashTable WindowTable = { 2, 112, WindowTableEntries, 79 };
 
 }; // namespace
 
